Split up the PlayerBase into a generic CharacterBase, which will be used for both players and enemies. Also added an EnemyBase class with nothing in it. This will be used for all enemies. - Nick Linton

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Adventurer.cs" />
+     <Compile Include="Assets\Scripts\CharacterBase.cs" />
+     <Compile Include="Assets\Scripts\EnemyBase.cs" />
      <Compile Include="Assets\Scripts\GameCamera.cs" />
      <Compile Include="Assets\Scripts\Gun.cs" />
      <Compile Include="Assets\Scripts\PlayerBase.cs" />
