Added Trigger and Goal Trigger prefabs. They are box colliders with IsTrigger set to true and they have the TriggerController and GoalController scripts attached to them. The TriggerController contains a list of GameObjects. When its Trigger function is called it will call the move function of every GameObject in the list. The GoalController keeps track of how many GameObjects are within the collider and once the desired number of GameObjects is reached, it can transition to the next scene.

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -47,29 +47,20 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Adventurer.cs" />
-     <Compile Include="Assets\Scripts\BallController.cs" />
-     <Compile Include="Assets\Scripts\Basic1Controller.cs" />
-     <Compile Include="Assets\Scripts\Basic2Controller.cs" />
      <Compile Include="Assets\Scripts\CharacterBase.cs" />
      <Compile Include="Assets\Scripts\CheckpointCollider.cs" />
-     <Compile Include="Assets\Scripts\Doorway.cs" />
      <Compile Include="Assets\Scripts\EnemyBase.cs" />
      <Compile Include="Assets\Scripts\GameCamera.cs" />
      <Compile Include="Assets\Scripts\GoalController.cs" />
-     <Compile Include="Assets\Scripts\HandleController.cs" />
-     <Compile Include="Assets\Scripts\LeverController.cs" />
      <Compile Include="Assets\Scripts\LightFlicker.cs" />
      <Compile Include="Assets\Scripts\MapManager.cs" />
-     <Compile Include="Assets\Scripts\Move1.cs" />
-     <Compile Include="Assets\Scripts\Move2.cs" />
-     <Compile Include="Assets\Scripts\Move3.cs" />
-     <Compile Include="Assets\Scripts\Move4.cs" />
      <Compile Include="Assets\Scripts\PickUps.cs" />
      <Compile Include="Assets\Scripts\PlayerBase.cs" />
      <Compile Include="Assets\Scripts\PlayerManager.cs" />
      <Compile Include="Assets\Scripts\Potion.cs" />
      <Compile Include="Assets\Scripts\Rogue.cs" />
      <Compile Include="Assets\Scripts\Sorcerer.cs" />
+     <Compile Include="Assets\Scripts\TriggerController.cs" />
      <Compile Include="Assets\Scripts\Warrior.cs" />
      <Compile Include="Assets\Scripts\cameraControl.cs" />
   </ItemGroup>
