Added TimedTrigger, TrapBase, and TrapController scripts as wall as TimedTrigger, Cannonball, and ProjectileTrap prefabs.
The ProjectileTrap holds a reference to the prefab to instantiate (currently the Cannonball). To use the trap, give a trigger a reference to the Trap object and set the trigger's attributes to values appropriate for that particular trap.

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,6 +46,50 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Exploder\Demo\Scripts\CursorLocking.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\ExploderMouseLook.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\GrenadeController.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\GrenadeObject.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\PanelChairBomb.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\PanelResetScene.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\PanelThrowObject.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\RPGController.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\RobotScript.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\Rocket.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\ShotgunController.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\TargetManager.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\ThrowObject.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\UseObject.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\WeaponManager.cs" />
+     <Compile Include="Assets\Exploder\DemoClickExplode\DemoClickExplode.cs" />
+     <Compile Include="Assets\Exploder\DemoClickExplode\DemoClickExplode2D.cs" />
+     <Compile Include="Assets\Exploder\DemoClickExplode\DemoSelfExplode.cs" />
+     <Compile Include="Assets\Exploder\DemoSimple\DemoSimple.cs" />
+     <Compile Include="Assets\Exploder\Examples\ExplodeAllObjects.cs" />
+     <Compile Include="Assets\Exploder\Examples\HowToGetActiveFragments.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\ArrayDictionary.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\Contour.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\LSHash.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\MeshCutter.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\MeshUtils.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\Plane.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\Polygon.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Explodable.cs" />
+     <Compile Include="Assets\Exploder\Exploder\ExploderObject.cs" />
+     <Compile Include="Assets\Exploder\Exploder\ExploderOption.cs" />
+     <Compile Include="Assets\Exploder\Exploder\ExploderQueue.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Fragment.cs" />
+     <Compile Include="Assets\Exploder\Exploder\FragmentPool.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderProfiler.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderSingleton.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderSlowMotion.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderUtils.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\HUDFPS.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\Hull2D.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\TestVertexColors.cs" />
+     <Compile Include="Assets\Exploder\Playmaker\CrackAction.cs" />
+     <Compile Include="Assets\Exploder\Playmaker\ExplodeAction.cs" />
+     <Compile Include="Assets\Exploder\Playmaker\ExplodeCrackedAction.cs" />
      <Compile Include="Assets\Rewired\Examples\ControlRemapping1\Scripts\ControlRemappingDemo1.cs" />
      <Compile Include="Assets\Rewired\Examples\CustomControllersTouch\Scripts\CustomControllerDemo.cs" />
      <Compile Include="Assets\Rewired\Examples\CustomControllersTouch\Scripts\CustomControllerDemo_Player.cs" />
@@ -71,6 +115,8 @@
      <Compile Include="Assets\Scripts\Characters\Woodsman\woodsBullet.cs" />
      <Compile Include="Assets\Scripts\Characters\Woodsman\woodsSpecialBulletScript.cs" />
      <Compile Include="Assets\Scripts\Characters\rewiredControl.cs" />
+     <Compile Include="Assets\Scripts\Coin.cs" />
+     <Compile Include="Assets\Scripts\DropGold.cs" />
      <Compile Include="Assets\Scripts\Enemy\Boss\KingRestless.cs" />
      <Compile Include="Assets\Scripts\Enemy\Boss\KingShockwave.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyAI.cs" />
@@ -91,18 +137,24 @@
      <Compile Include="Assets\Scripts\Environment\Triggers\CheckpointCollider.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\Doorway.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\DurationTrapObj.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\FlameTrap.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\InteractTrigger.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\MovingPlatform.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\ProjectileTrapObj.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\TimedTrap.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\TimedTrigger.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\TrapBase.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\TrapController.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\TriggerController.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\TriggerTrap.cs" />
      <Compile Include="Assets\Scripts\Environment\cameraControl.cs" />
      <Compile Include="Assets\Scripts\GUI\HealthScaling.cs" />
+     <Compile Include="Assets\Scripts\Gold.cs" />
      <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EditorLabel.cs" />
      <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EnableCameraDepthInForward.cs" />
      <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\LightCone.shader" />
+     <None Include="Assets\Exploder\Demo\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\ShaderForge\Readme.txt" />
      <None Include="Assets\Rewired\Documentation\licences.txt" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\MaterialPlatform.shader" />
@@ -111,8 +163,10 @@
      <None Include="Assets\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Refraction.shader" />
+     <None Include="Assets\Exploder\Demo\Shaders\VertexColor.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Parallax.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\LightWrapping.shader" />
+     <None Include="Assets\Exploder\Exploder\3rd\P2T.txt" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\VertexColorRounding.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\TessellationDisplacement.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Tiles.shader" />
@@ -123,8 +177,11 @@
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
  </Reference>
+ <Reference Include="P2T">
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Exploder/Exploder/3rd/P2T.dll</HintPath>
+ </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>Z:/Senior Project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
