--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -19,7 +19,7 @@
 	<DebugType>full</DebugType>
 	<Optimize>false</Optimize>
 	<OutputPath>Temp\bin\Debug\</OutputPath>
-	<DefineConstants>DEBUG;TRACE;UNITY_4_6_0;UNITY_4_6;UNITY_STANDALONE_WIN;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_UNITYEVENTS;ENABLE_NEW_HIERARCHY ;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_TERRAIN;ENABLE_SUBSTANCE;ENABLE_GENERICS;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_4_6_FEATURES;INCLUDE_WP_BLUE_SUPPORT;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN;UNITY_TEAM_LICENSE;UNITY_PRO_LICENSE</DefineConstants>
+	<DefineConstants>DEBUG;TRACE;UNITY_4_6_0;UNITY_4_6;UNITY_STANDALONE_WIN;ENABLE_MICROPHONE;ENABLE_TEXTUREID_MAP;ENABLE_UNITYEVENTS;ENABLE_NEW_HIERARCHY ;ENABLE_AUDIO_FMOD;UNITY_STANDALONE;ENABLE_MONO;ENABLE_TERRAIN;ENABLE_SUBSTANCE;ENABLE_GENERICS;INCLUDE_WP8SUPPORT;ENABLE_MOVIES;ENABLE_WWW;ENABLE_IMAGEEFFECTS;ENABLE_4_6_FEATURES;INCLUDE_WP_BLUE_SUPPORT;ENABLE_WEBCAM;INCLUDE_METROSUPPORT;RENDER_SOFTWARE_CURSOR;ENABLE_NETWORK;ENABLE_PHYSICS;ENABLE_CACHING;ENABLE_CLOTH;ENABLE_2D_PHYSICS;ENABLE_SHADOWS;ENABLE_AUDIO;ENABLE_NAVMESH_CARVING;ENABLE_DUCK_TYPING;ENABLE_SINGLE_INSTANCE_BUILD_SETTING;ENABLE_PROFILER;UNITY_EDITOR;UNITY_EDITOR_WIN;UNITY_PRO_LICENSE</DefineConstants>
 	<ErrorReport>prompt</ErrorReport>
 	<WarningLevel>4</WarningLevel>
 	<NoWarn>0169</NoWarn>
@@ -46,7 +46,50 @@
 	</Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Player1GuiPos.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\CursorLocking.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\ExploderMouseLook.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\GrenadeController.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\GrenadeObject.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\PanelChairBomb.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\PanelResetScene.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\PanelThrowObject.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\RPGController.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\RobotScript.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\Rocket.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\ShotgunController.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\TargetManager.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\ThrowObject.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\UseObject.cs" />
+     <Compile Include="Assets\Exploder\Demo\Scripts\WeaponManager.cs" />
+     <Compile Include="Assets\Exploder\DemoClickExplode\DemoClickExplode.cs" />
+     <Compile Include="Assets\Exploder\DemoClickExplode\DemoClickExplode2D.cs" />
+     <Compile Include="Assets\Exploder\DemoClickExplode\DemoSelfExplode.cs" />
+     <Compile Include="Assets\Exploder\DemoSimple\DemoSimple.cs" />
+     <Compile Include="Assets\Exploder\Examples\ExplodeAllObjects.cs" />
+     <Compile Include="Assets\Exploder\Examples\HowToGetActiveFragments.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\ArrayDictionary.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\Contour.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\LSHash.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\MeshCutter.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\MeshUtils.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\Plane.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Core\Polygon.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Explodable.cs" />
+     <Compile Include="Assets\Exploder\Exploder\ExploderObject.cs" />
+     <Compile Include="Assets\Exploder\Exploder\ExploderOption.cs" />
+     <Compile Include="Assets\Exploder\Exploder\ExploderQueue.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Fragment.cs" />
+     <Compile Include="Assets\Exploder\Exploder\FragmentPool.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderProfiler.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderSingleton.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderSlowMotion.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\ExploderUtils.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\HUDFPS.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\Hull2D.cs" />
+     <Compile Include="Assets\Exploder\Exploder\Utils\TestVertexColors.cs" />
+     <Compile Include="Assets\Exploder\Playmaker\CrackAction.cs" />
+     <Compile Include="Assets\Exploder\Playmaker\ExplodeAction.cs" />
+     <Compile Include="Assets\Exploder\Playmaker\ExplodeCrackedAction.cs" />
      <Compile Include="Assets\Rewired\Examples\ControlRemapping1\Scripts\ControlRemappingDemo1.cs" />
      <Compile Include="Assets\Rewired\Examples\CustomControllersTouch\Scripts\CustomControllerDemo.cs" />
      <Compile Include="Assets\Rewired\Examples\CustomControllersTouch\Scripts\CustomControllerDemo_Player.cs" />
@@ -72,7 +115,10 @@
      <Compile Include="Assets\Scripts\Characters\Woodsman\woodsBullet.cs" />
      <Compile Include="Assets\Scripts\Characters\Woodsman\woodsSpecialBulletScript.cs" />
      <Compile Include="Assets\Scripts\Characters\rewiredControl.cs" />
+     <Compile Include="Assets\Scripts\Coin.cs" />
+     <Compile Include="Assets\Scripts\DropGold.cs" />
      <Compile Include="Assets\Scripts\Enemy\Boss\KingRestless.cs" />
+     <Compile Include="Assets\Scripts\Enemy\Boss\KingShockwave.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyAI.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyArchtypeHorde.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemyArchtypeMelee.cs" />
@@ -81,7 +127,6 @@
      <Compile Include="Assets\Scripts\Enemy\EnemyManager.cs" />
      <Compile Include="Assets\Scripts\Enemy\EnemySpawner.cs" />
      <Compile Include="Assets\Scripts\Enemy\enemyControl.cs" />
-     <Compile Include="Assets\Scripts\Environment\Destructable.cs" />
      <Compile Include="Assets\Scripts\Environment\GameCamera.cs" />
      <Compile Include="Assets\Scripts\Environment\MapManager.cs" />
      <Compile Include="Assets\Scripts\Environment\Props\DoorController.cs" />
@@ -92,17 +137,24 @@
      <Compile Include="Assets\Scripts\Environment\Triggers\CheckpointCollider.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\Doorway.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\DurationTrapObj.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\FlameTrap.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\InteractTrigger.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\MovingPlatform.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\ProjectileTrapObj.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\TimedTrap.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\TimedTrigger.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\TrapBase.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\TrapController.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\TriggerController.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\TriggerTrap.cs" />
      <Compile Include="Assets\Scripts\Environment\cameraControl.cs" />
      <Compile Include="Assets\Scripts\GUI\HealthScaling.cs" />
+     <Compile Include="Assets\Scripts\Gold.cs" />
      <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EditorLabel.cs" />
      <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EnableCameraDepthInForward.cs" />
+     <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\LightCone.shader" />
+     <None Include="Assets\Exploder\Demo\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\ShaderForge\Readme.txt" />
      <None Include="Assets\Rewired\Documentation\licences.txt" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\MaterialPlatform.shader" />
@@ -111,8 +163,10 @@
      <None Include="Assets\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Refraction.shader" />
+     <None Include="Assets\Exploder\Demo\Shaders\VertexColor.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Parallax.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\LightWrapping.shader" />
+     <None Include="Assets\Exploder\Exploder\3rd\P2T.txt" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\VertexColorRounding.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\TessellationDisplacement.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Tiles.shader" />
@@ -123,8 +177,11 @@
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/4.6.0/UnityEngine.UI.dll</HintPath>
  </Reference>
+ <Reference Include="P2T">
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Exploder/Exploder/3rd/P2T.dll</HintPath>
+ </Reference>
  <Reference Include="Rewired_Core">
- <HintPath>C:/Users/faculty/Desktop/Senior Project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
+ <HintPath>Z:/profiledata/Desktop/senior project/trunk/Assets/Rewired/Internal/Libraries/Runtime/Rewired_Core.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
