Add the spike trap and trap controller scripts and prefabs. The traps and triggers still need some work but they do function properly...
Making a trap...
1. put a TrapController in the scene
2. add a Trigger to the scene as a child of the TrapController
3. give the Trigger a reference to the TrapController
4. add a TrapObject to the scene as a child of the TrapController
5. set the TrapObject's spawner attribute to True
6. give the TrapController a reference to the TrapObject
7. adjust the attributes of the TrapObject and Trigger to obtain the desired behavior

--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -133,6 +133,7 @@
      <Compile Include="Assets\Scripts\Environment\Props\KeyController.cs" />
      <Compile Include="Assets\Scripts\Environment\Props\LightFlicker.cs" />
      <Compile Include="Assets\Scripts\Environment\Props\Potion.cs" />
+     <Compile Include="Assets\Scripts\Environment\Room\HordeRoom.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\AutoTrigger.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\CheckpointCollider.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\Doorway.cs" />
@@ -141,6 +142,7 @@
      <Compile Include="Assets\Scripts\Environment\Triggers\InteractTrigger.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\MovingPlatform.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\ProjectileTrapObj.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\SpikeTrap.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\TimedTrap.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\TimedTrigger.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\TrapBase.cs" />
