--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -107,6 +107,7 @@
      <Compile Include="Assets\Scripts\Characters\Sorceress\FBParticleBehavior.cs" />
      <Compile Include="Assets\Scripts\Characters\Sorceress\Fireball.cs" />
      <Compile Include="Assets\Scripts\Characters\Sorceress\Icicle_Shot.cs" />
+     <Compile Include="Assets\Scripts\Characters\Sorceress\MeteorController.cs" />
      <Compile Include="Assets\Scripts\Characters\Sorceress\Sorcerer.cs" />
      <Compile Include="Assets\Scripts\Characters\Warrior\Warrior.cs" />
      <Compile Include="Assets\Scripts\Characters\Woodsman\HawkAI2.cs" />
@@ -129,11 +130,13 @@
      <Compile Include="Assets\Scripts\Enemy\enemyControl.cs" />
      <Compile Include="Assets\Scripts\Environment\GameCamera.cs" />
      <Compile Include="Assets\Scripts\Environment\MapManager.cs" />
+     <Compile Include="Assets\Scripts\Environment\Props\Arrow.cs" />
      <Compile Include="Assets\Scripts\Environment\Props\DoorController.cs" />
      <Compile Include="Assets\Scripts\Environment\Props\KeyController.cs" />
      <Compile Include="Assets\Scripts\Environment\Props\LightFlicker.cs" />
      <Compile Include="Assets\Scripts\Environment\Props\Potion.cs" />
      <Compile Include="Assets\Scripts\Environment\Room\HordeRoom.cs" />
+     <Compile Include="Assets\Scripts\Environment\Triggers\ArrowShooter.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\AutoTrigger.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\CheckpointCollider.cs" />
      <Compile Include="Assets\Scripts\Environment\Triggers\Doorway.cs" />
@@ -155,25 +158,49 @@
      <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EditorLabel.cs" />
      <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EnableCameraDepthInForward.cs" />
      <Compile Include="Assets\SimpleParticlePack\Scripts\ParticleTester.cs" />
+     <None Include="Assets\Shaders\Bookshelf_1_Mat.shader" />
+     <None Include="Assets\Scripts\Shaders\IceShader.shader" />
+     <None Include="Assets\Shaders\ReaperStatue_1_Mat.shader" />
+     <None Include="Assets\Shaders\Table_1_Mat.shader" />
+     <None Include="Assets\Shaders\SmallContainers_1_Mat.shader" />
+     <None Include="Assets\Scripts\Shaders\Steve 1.shader" />
+     <None Include="Assets\Shaders\Wall_4_1_Mat.shader" />
+     <None Include="Assets\Shaders\Floor_1_Mat.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\LightCone.shader" />
      <None Include="Assets\Exploder\Demo\Standard Assets\Particles\Sources\Shaders\Particle Alpha Blend (Queue +100).shader" />
      <None Include="Assets\ShaderForge\Readme.txt" />
+     <None Include="Assets\Shaders\ColumnRound_1_Mat_B.shader" />
+     <None Include="Assets\Shaders\Wall_Doorway_1_Mat.shader" />
      <None Include="Assets\Rewired\Documentation\licences.txt" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\MaterialPlatform.shader" />
+     <None Include="Assets\Shaders\StoneSingles_1_Mat.shader" />
+     <None Include="Assets\Scripts\Shaders\NewShader.shader" />
      <None Include="Assets\Rewired\Documentation\ReadMe.txt" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Vegetation.shader" />
+     <None Include="Assets\Shaders\Scrolls_1_Mat.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\VertexAnimation.shader" />
+     <None Include="Assets\Shaders\ColumnsRuined_1_Mat.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Cubemaps.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Refraction.shader" />
      <None Include="Assets\Exploder\Demo\Shaders\VertexColor.shader" />
+     <None Include="Assets\Shaders\TombTop_1_Mat.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Parallax.shader" />
+     <None Include="Assets\Scripts\Shaders\Steve.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\LightWrapping.shader" />
+     <None Include="Assets\Shaders\Wall_4_Cutout_1_Mat.shader" />
+     <None Include="Assets\Shaders\Bones_1_Mat.shader" />
+     <None Include="Assets\Scripts\Shaders\Floor.shader" />
      <None Include="Assets\Exploder\Exploder\3rd\P2T.txt" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\VertexColorRounding.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\TessellationDisplacement.shader" />
+     <None Include="Assets\Shaders\Switch_1_Mat.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\Tiles.shader" />
+     <None Include="Assets\Shaders\ColumnSquare_1_Mat.shader" />
      <None Include="Assets\Rewired\Documentation\ReleaseNotes.txt" />
+     <None Include="Assets\Shaders\TombFancy_1_Mat.shader" />
+     <None Include="Assets\Shaders\Wall_8_1_Mat.shader" />
      <None Include="Assets\Scripts\Shaders\MultiTexture.shader" />
+     <None Include="Assets\Shaders\TombBottom_1_Mat.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\PixelRotator.shader" />
      <None Include="Assets\ShaderForge\Example Assets\Shaders\CustomLighting.shader" />
  <Reference Include="UnityEngine.UI">
